<!-- CITATION: Some strings from Lab4 and Lab7-->
<resources>
    <string name="app_name">Local Apparel</string>
    <string name="register_new_account">Register new account</string>
    <string name="add">Add</string>
    <string name="account_login">Account Login</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="passwordInfo">Your password must contain at least one number and one letter, and be between 6 and 32 characters in length.</string>
    <string-array name="distances_array">
        <item>5 miles</item>
        <item>10 miles</item>
        <item>15 miles</item>
        <item>20 miles</item>
        <item>25 miles</item>
    </string-array>
    <string name="intro_slide1_title">Welcome to Local Apparel</string>
    <string name="intro_slide1_desc">This app is designed to allow users to buy and sell clothes to others in their area</string>
    <string name="intro_slide2_title">Location Based Shopping</string>
    <string name="intro_slide2_desc">Upon logging into the app, you will be shown all of the local apparel listings in your area </string>
    <string name="intro_slide3_title">Add Your Own Listings </string>
    <string name="intro_slide3_desc">Adding your own listings is simple, and once you add a new item, all Local Apparel users in your area will be able to see and buy your product!</string>
    <string name="intro_slide4_title">Get Started</string>
    <string name="intro_slide4_desc">Ready to go? Click the check mark to make your account!</string>



</resources>
